new articles pages

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -56,11 +56,11 @@ html(lang="ru")
                         svg.icon-fluid
                             use(xlink:href="#icon-logo")
                     nav.header__nav.justify-content-center
-                        a.header__btn.mr-3(href="#")
+                        a.header__btn.text-uppercase.mr-3(href="#")
                             svg.header__btn-icon
                                 use(xlink:href="#icon-menu")
                             span.header__btn-title Каталог
-                        a.header__btn(href="#")
+                        a.header__btn.text-uppercase(href="#")
                             svg.header__btn-icon
                                 use(xlink:href="#icon-services")
                             span.header__btn-title Услуги
@@ -97,7 +97,7 @@ html(lang="ru")
                                 svg.icon-fluid
                                     use(xlink:href="#icon-user")
                             span.header__btn-title Вход | регистрация
-                    a.header__btn.header__btn_inverse(href="#")
+                    a.header__btn.text-uppercase.header__btn_inverse(href="#")
                         svg.header__btn-icon.mr-0
                             use(xlink:href="#icon-cart")
             .header__bottom
