--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -190,4 +190,4 @@
       .filter__alert-info
         .text-sm Найдено:
         | 713
-      button.btn.btn_bordered.px-3(type="button") Показать
+      button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
