--- a/src/pug/carousel/comparing.pug
+++ b/src/pug/carousel/comparing.pug
@@ -19,7 +19,7 @@
     .card__footer
       .card__meta.card__meta_row
         .card__price
-          span.card__price-value 7 337.12 
+          span.card__price-value 7 337.12
           | ₽
         .card__price.card__price_old 12 337.12 ₽
       .d-flex.align-items-center.justify-content-between
@@ -28,7 +28,7 @@
           button.recalculate__btn.recalculate__btn_remove(type="button") -
           .recalculate__value 4
           button.recalculate__btn.recalculate__btn_add(type="button") +
-        a.btn(href="#") В корзину
+        a.btn.text-uppercase(href="#") В корзину
   .params
     .params__row
       .params__title Ширина
