--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -153,4 +153,4 @@ block wrapper
                 | условия
                 a.color-brand(href="#") Политики конфиденциальности
             .d-flex.justify-content-center.justify-content-lg-end.col-xl-2.col-lg-3.offset-lg-0.col-md-10.offset-md-1
-              button.btn.px-5(type="submit") отправить
+              button.btn.text-uppercase.px-5(type="submit") отправить
