--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -104,7 +104,7 @@ block wrapper
                                     use(xlink:href="#icon-nonspikes")
                                 span.form__label-title Без шипов
                         .col-md-8.offset-md-2.text-center
-                            a.btn.px-4(href="#") подобрать
+                            a.btn.text-uppercase.px-4(href="#") подобрать
                 form.form.tab-pane.fade(id="filter-wheels" role="tabpanel" action="#")
                     .row
                         .form__row.col-lg-10.offset-lg-1
@@ -176,7 +176,7 @@ block wrapper
                                     use(xlink:href="#icon-steel")
                                 span.form__label-title Стальные
                         .col-md-10.offset-md-1.text-center
-                            a.btn.px-4(href="#") подобрать
+                            a.btn.text-uppercase.px-4(href="#") подобрать
                 form.form.tab-pane.fade(id="filter-cars" role="tabpanel" action="#")
                     .row
                         .form__row.col-lg-10.offset-lg-1
@@ -331,8 +331,8 @@ block wrapper
                                 span.result-item__title.px-xl-3.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
                     .row
                         .col-lg-10.offset-lg-1.d-flex.flex-sm-row.flex-column.align-items-center.justify-content-sm-around.justify-content-center
-                            a.btn.px-4.mb-4.mb-sm-0(href="#") подобрать шины
-                            a.btn.px-4(href="#") подобрать Диски
+                            a.btn.text-uppercase.px-4.mb-4.mb-sm-0(href="#") подобрать шины
+                            a.btn.text-uppercase.px-4(href="#") подобрать Диски
 
         .section.row
             .col-lg-7
@@ -355,7 +355,7 @@ block wrapper
                     img.img-cover(src="../img/content/banners/banner-1.jpg" alt="" title="")
                     .banner__inner
                         .banner__title.banner__title_colored.banner__title_sm Запись на шиномонтаж онлайн
-                        a.btn(href="#") Записаться
+                        a.btn.text-uppercase(href="#") Записаться
 
         .tabs
             ul.tabs__nav.nav.nav-tabs(role="tablist")
@@ -363,12 +363,12 @@ block wrapper
                     a.tabs__nav-link.nav-link.active(href="#links-tires" data-toggle="tab" role="tab" aria-controls="links-tires" aria-selected="true")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-tires")
-                        span.tabs__nav-title.tabs__nav-title_upp шины
+                        span.tabs__nav-title.text-uppercase шины
                 li.tabs__nav-item.nav-item
                     a.tabs__nav-link.nav-link(href="#links-wheels" data-toggle="tab" role="tab" aria-controls="links-wheels" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-wheels")
-                        span.tabs__nav-title.tabs__nav-title_upp диски
+                        span.tabs__nav-title.text-uppercase диски
             .tabs__content.tab-content
                 .tab-pane.fade.show.active(id="links-tires" role="tabpanel" action="#")
                     .row
@@ -449,46 +449,46 @@ block wrapper
                     .section__title Новости
                     .row
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-1.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Работа на майские праздники 2021
+                                    a.media__title.d-block.mb-2(href="#") Работа на майские праздники 2021
                                     .media__date 23.10.2021
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-2.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Выходные Дини с 29 марта до 5 апреля
+                                    a.media__title.d-block.mb-2(href="#") Выходные Дини с 29 марта до 5 апреля
                                     .media__date 23.10.2021
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-3.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
+                                    a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-4.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
+                                    a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-5.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Рассрочка на шины и диски!
+                                    a.media__title.d-block.mb-2(href="#") Рассрочка на шины и диски!
                                     .media__date 23.10.2021
                         .col-md-6
-                            .media
-                                a.media__picture(href="#")
+                            .media.mb-4
+                                a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-6.jpg" alt="" title="")
                                 .media__meta
-                                    a.media__title(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
+                                    a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                     .text-center
                         a.readmore(href="#") Узнать больше новостей
@@ -497,7 +497,7 @@ block wrapper
                     img.img-cover(src="../img/content/banners/banner-2.jpg" alt="" title="")
                     .banner__inner.banner__inner_offset
                         .banner__title Подбор запчастей по VIN-коду
-                        a.btn(href="#") Подобрать
+                        a.btn.text-uppercase(href="#") Подобрать
 
         .section
             .section__wrapper
