--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -34,7 +34,7 @@ block personal
                 use(xlink:href="#icon-wapp")
               span.contacts__item-title Напомнить в WhatsApp
           .col-xl-5.d-flex.justify-content-xl-end
-            button.btn.btn_icon.btn_nobg(type="button")
+            button.btn.text-uppercase.btn_icon.btn_nobg(type="button")
               svg.btn__icon.color-brand.mr-2
                 use(xlink:href="#icon-trash")
               | Отменить запись
@@ -43,7 +43,7 @@ block personal
       .section__body.border-0.pb-0.mb-0
         .row.align-items-center
           .col-xl-8.col-sm-6
-            button.btn.btn_icon.btn_nobg(type="button")
+            button.btn.text-uppercase.btn_icon.btn_nobg(type="button")
               svg.btn__icon.color-brand.mr-2
                 use(xlink:href="#icon-tool")
               | Записаться на услугу
