--- a/src/pug/personal-pwd.pug
+++ b/src/pug/personal-pwd.pug
@@ -29,4 +29,4 @@ block personal
             li пароль должен состоять из букв латинского алфавита (A-z), арабских цифр (0-9) и специальных символов ( . , : ; ? ! * + % - < > @ [ ] { } / \ _ {} $ # ):
             li буквенная часть пароля должна содержать как строчные, так и прописные (заглавные) буквы.
         .form__footer.form__footer_px.d-flex.justify-content-md-end.justify-content-center
-          button.btn.px-5(type="submit") Изменить пароль
+          button.btn.text-uppercase.px-5(type="submit") Изменить пароль
