--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -33,4 +33,4 @@ block personal
                 input.form__field(type="text" value="21")
                 .form__label.form__label_title Дом
         .form__footer.form__footer_px.d-flex.justify-content-md-end.justify-content-center
-          button.btn.px-sm-5.px-3(type="submit") сохранить изменения
+          button.btn.text-uppercase.px-sm-5.px-3(type="submit") сохранить изменения
