--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -17,4 +17,4 @@ block personal
           .col-xl-7
             .h6.color-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
           .col-xl-5.d-flex.justify-content-xl-end
-            button.btn(type="button") Оформить заказ
+            button.btn.text-uppercase(type="button") Оформить заказ
