--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -20,7 +20,7 @@ block wrapper
             br
             | запишитесь прямо сейчас:
       .section__footer.p-0
-        button.btn(type="button") Записаться онлайн
+        button.btn.text-uppercase(type="button") Записаться онлайн
 
   .wrapper
     .section
