--- a/src/pug/tile/row.pug
+++ b/src/pug/tile/row.pug
@@ -1,7 +1,7 @@
 .card.card_row.mb-2
   .card__col 175
   .card__col 70
-  .card__col 
+  .card__col
     .card__meta.card__meta_row.mb-0
       .card__features
         .icon-marker.mr-2
@@ -19,4 +19,4 @@
         button.recalculate__btn.recalculate__btn_remove(type="button") -
         .recalculate__value 4
         button.recalculate__btn.recalculate__btn_add(type="button") +
-      a.btn(href="#") В корзину
+      a.btn.text-uppercase(href="#") В корзину
