--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@ $grid-gutter-width: 8px;
 @import '~bootstrap/scss/utilities/text';
 @import '~bootstrap/scss/utilities/embed';
 @import '~bootstrap/scss/utilities/borders';
-//@import '~bootstrap/scss/utilities/display';
+@import '~bootstrap/scss/utilities/display';
 
 /* base */
 @import 'base/fonts';
