--- a/src/scss/tpl/_media.scss
+++ b/src/scss/tpl/_media.scss
@@ -1,14 +1,26 @@
 .media {
   display: flex;
-  margin: 0 0 24px;
 
-  &.media_row {
-    margin-bottom: 0;
+  &.media_shadow {
     overflow: hidden;
     border-radius: 8px;
     background: #fff;
     box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.16);
 
+    .media__picture {
+      border-radius: 0;
+    }
+
+    .media__date {
+      @include px(12px);
+    }
+
+    .media__title {
+      @include h3;
+    }
+  }
+
+  &.media_row {
     @include media-breakpoint-up(lg) {
       grid-column-start: 1;
       grid-column-end: 3;
@@ -19,9 +31,6 @@
     }
 
     .media__picture {
-      margin-right: 0;
-      border-radius: 0;
-
       @include media-breakpoint-up(xl) {
         @include fw(100%/12*2);
       }
@@ -35,7 +44,6 @@
       }
 
       @include media-breakpoint-down(sm) {
-        margin: 0 0 24px;
         flex: 1 0 auto;
         max-width: initial;
       }
@@ -61,19 +69,7 @@
       }
     }
 
-    .media__date {
-      @include px(12px);
-    }
-
-    .media__title {
-      @include h3;
-      font-weight: bold;
-      margin: 0 0 16px;
-    }
-
     .media__intro {
-      @include h5;
-
       @include media-breakpoint-down(md) {
         height: 88px;
         overflow: hidden;
@@ -85,22 +81,32 @@
     grid-column-start: initial;
     grid-column-end: initial;
 
+    @include media-breakpoint-down(sm) {
+      flex-direction: column;
+    }
+
     .media__picture {
       @include media-breakpoint-up(lg) {
         @include fw(100%/12*6);
+      }
+
+      @include media-breakpoint-only(md) {
+        @include fw(100%/12*6);
+      }
+
+      @include media-breakpoint-down(sm) {
+        flex: 1 0 auto;
+        max-width: initial;
       }
     }
 
     .media__meta {
       @include media-breakpoint-up(lg) {
         @include fw(100%/12*6);
-        padding: 24px;
       }
-    }
 
-    .media__title {
-      @include media-breakpoint-up(lg) {
-        margin: 0 0 8px;
+      @include media-breakpoint-only(md) {
+        @include fw(100%/12*6);
       }
     }
 
@@ -114,7 +120,6 @@
 }
 
 .media__picture {
-  margin: 0 8px 0 0;
   overflow: hidden;
   border-radius: 8px;
 
@@ -136,9 +141,6 @@
 }
 
 .media__title {
-  display: block;
-  margin: 0 0 8px;
-
   @include media-breakpoint-up(md) {
     @include h4;
   }
