--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -1,55 +1,27 @@
 extends base
 
 block meta
-  - var title = 'Страница статьи';
+  - var title = 'Страница статьи (стандартная)';
 
 block wrapper
   .wrapper
-    .section
-      .section__wrapper.section__wrapper_px.mx-0
-        .section__meta
-          nav.pathway
-            a.pathway__link(href="#") Главная
-            a.pathway__link(href="#") Статьи
-            a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
-          section.content
-            .color-brand
-              h1 Обзор на летние шины Pirelli P Zero от ДонШина
-            .content__date 30 ноября 2021
-          .section__video
-            .row
-              .col-xl-8.col-lg-10.mb-4
-                .embed-responsive.embed-responsive-16by9
-                  iframe.embed-responsive-item(src="https://www.youtube.com/embed/_4rN_sP9DHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-              .col-xl-8.col-lg-10.d-flex.flex-column.flex-sm-row.align-items-start.align-items-sm-center.justify-content-sm-between.px-lg-0.px-md-5.px-4
-                nav.social.mb-4.mb-sm-0
-                  .social__title.mr-2 Поделиться:
-                  a.social__item.mr-2(href="#")
-                    +icon('vk')
-                  a.social__item.mr-2(href="#")
-                    +icon('instagram')
-                  a.social__item.mr-2(href="#")
-                    +icon('youtube')
-                  a.social__item(href="#")
-                    +icon('facebook')
-                a.readmore(href="#") Смотреть на нашем канале
-
-    .section
-      .section__wrapper.section__wrapper_px.section__wrapper_grid.mx-0
-        .section__meta
-          nav.pathway
-            a.pathway__link(href="#") Главная
-            a.pathway__link(href="#") Статьи
-            a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
-          section.content
-            .color-brand
-              h1 Как самостоятельно заменить тормозную жидкость
-            .content__date 30 ноября 2021
-            .section__picture.d-block.d-lg-none
-              +img('content/media/media-7.jpg','img-cover')
-            .content__intro Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
-        .section__picture.d-none.d-lg-block
-          +img('content/media/media-7.jpg','img-cover')
+    block articles__section
+      .section
+        .section__wrapper.section__wrapper_px.section__wrapper_grid.mx-0
+          .section__meta
+            nav.pathway
+              a.pathway__link(href="#") Главная
+              a.pathway__link(href="#") Статьи
+              a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
+            section.content
+              .color-brand
+                h1 Как самостоятельно заменить тормозную жидкость
+              .content__date 30 ноября 2021
+              .section__picture.d-block.d-lg-none
+                +img('content/media/media-7.jpg','img-cover')
+              .content__intro Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
+          .section__picture.d-none.d-lg-block
+            +img('content/media/media-7.jpg','img-cover')
 
     .section
       .section__wrapper.section__wrapper_px.mx-0
