--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -7,6 +7,6 @@
         .form__item.mb-4
           input.form__field(type="text" value="")
           label.form__label.form__label_title e-mail
-        button.btn.px-5.mb-3(type="submit") подписаться
-        .form__footer Нажимая “Подписаться” вы принимаете условия 
+        button.btn.text-uppercase.px-5.mb-3(type="submit") подписаться
+        .form__footer Нажимая “Подписаться” вы принимаете условия
           a.color-brand(href="#") Политики конфиденциальности
