--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -148,6 +148,6 @@ block wrapper
                 .filter__alert-info
                   .text-sm Найдено:
                   | 713
-                button.btn.btn_bordered.px-3(type="button") Показать
+                button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
 
         .col-xl-10.col-lg-9.mb-4
