--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -23,7 +23,7 @@ mixin banner(banner__img, banner__noshadow=false, banner__classmod="card_column 
         +img(banner__img,'img-cover')
         .banner__inner
           .banner__title.banner__title_colored.banner__title_xs!= banner__title
-          a.btn(href="#") Записаться
+          a.btn.text-uppercase(href="#") Записаться
   else
     .card(class=banner__classmod)
       a.card__picture(href="#")
@@ -48,11 +48,11 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
         +img(card__img)
       .card__meta.card__meta_left
         if (card__label === 'discount')
-          .card__label.card__label_discount Скидка
+          .card__label.card__label_discount.text-uppercase Скидка
         else if (card__label === 'sale')
-          .card__label.card__label_sale Акция
+          .card__label.card__label_sale.text-uppercase Акция
         else if (card__label === 'hit')
-          .card__label.card__label_hit Хит
+          .card__label.card__label_hit.text-uppercase Хит
         .card__features.card__features_col
           if (card__warranty)
             .card__features-item
@@ -126,7 +126,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
             button.recalculate__btn.recalculate__btn_remove(type="button") -
             .recalculate__value 4
             button.recalculate__btn.recalculate__btn_add(type="button") +
-          a.btn(href="#") В корзину
+          a.btn.text-uppercase(href="#") В корзину
         if (card__oneclick)
           button.card__btn.card__btn_link.w-100(type="button")
             span.card__btn-icon
