--- a/src/scss/tpl/_swiper.scss
+++ b/src/scss/tpl/_swiper.scss
@@ -1,6 +1,10 @@
 .slides {
-    @include mx(-16px);
     @include px(16px);
+    margin-left: -16px;
+
+    @include media-breakpoint-down(lg) {
+      margin-right: -16px;
+    }
 
     &.slides_grid {
         @include media-breakpoint-up(lg) {
@@ -15,15 +19,15 @@
 
         .swiper-wrapper {
             @include media-breakpoint-up(xl) {
-               grid-template-columns: repeat(5,1fr); 
+               grid-template-columns: repeat(5,1fr);
             }
 
             @media (min-width:$breakpoint__custom) {
-                grid-template-columns: repeat(6,1fr); 
+                grid-template-columns: repeat(6,1fr);
             }
 
             @include media-breakpoint-only(lg) {
-                grid-template-columns: repeat(4,1fr); 
+                grid-template-columns: repeat(4,1fr);
             }
 
             @include media-breakpoint-up(lg) {
@@ -101,7 +105,7 @@
                 @include media-breakpoint-up(lg) {
                     margin: 0 8px 0 0;
                 }
-        
+
                 @include media-breakpoint-down(md) {
                     margin: 0 4px 0 0;
                 }
