px -> rem, pt. 1

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -219,5 +219,5 @@ html(lang="ru")
     carousel/comparing.pug
     carousel/comparing-noparamtitle.pug
 
-  .mb-sm-3 - для случая card_tile
+    + .mb-sm-3 - для случая card_tile
   .slides_togglers-next в category/popular.pug
