--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -5,7 +5,7 @@ block meta
 
 block wrapper
     .wrapper
-        .tabs
+        .tabs.mb-5
             ul.tabs__nav.nav.nav-tabs(role="tablist")
                 li.tabs__nav-item.nav-item
                     a.tabs__nav-link.tabs__nav-link_notitle.nav-link.active(href="#filter-tires" data-toggle="tab" role="tab" aria-controls="filter-tires" aria-selected="true")
