--- a/src/pug/results-tires.pug
+++ b/src/pug/results-tires.pug
@@ -5,4 +5,4 @@ block meta
   - var h1 = 'Купить в Ростове-на-Дону шины R18 диаметра';
 
 block results__filter
-  .category-counter 1 840 товаров
+  .category-counter.mb-4 1 840 товаров
