--- a/src/pug/results-wheels.pug
+++ b/src/pug/results-wheels.pug
@@ -5,7 +5,7 @@ block meta
   - var h1 = 'Диски ширина 10, R20';
 
 block results__filter
-  .category-counter 1 840 товаров
+  .category-counter.mb-4 1 840 товаров
 
 block results__sidebar
   include base/filter-wheels.pug
