--- a/src/pug/subcategory-tires-list.pug
+++ b/src/pug/subcategory-tires-list.pug
@@ -22,7 +22,7 @@ block wrapper
         a.pathway__current(href="#") Cordiant 2
       section.content
         h1 Шины CORDIANT Comfort 2 в Ростове-на-Дону
-      .category-counter 1 840 товаров
+      .category-counter.mb-4 1 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           a.brand.brand_category.mb-3(href="#")
