--- a/src/scss/tpl/_brand.scss
+++ b/src/scss/tpl/_brand.scss
@@ -5,7 +5,7 @@
   padding: 16px;
   background: #fff;
   border-radius: 8px;
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.16);
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, .16);
 
   @include media-breakpoint-up(lg) {
     justify-content: center;
