--- a/src/scss/tpl/_filter.scss
+++ b/src/scss/tpl/_filter.scss
@@ -42,7 +42,7 @@
   justify-content: center;
   color: $color__text_default;
   background: $color__light;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12) inset;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
 }
 
 .filter-toggler__icon {
