--- a/src/scss/tpl/_search.scss
+++ b/src/scss/tpl/_search.scss
@@ -10,7 +10,7 @@
     @include fw(100%);
     @include wh(100%,40px);
     @include fs-lh(1rem,1.375rem);
-    letter-spacing: 0.05em;
+    letter-spacing: .05em;
     padding: 8px 0 8px 14px;
     border: 0;
     background: none;
