--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -21,7 +21,7 @@ block wrapper
         a.pathway__current(href="#") Шины R18
       section.content
         h1 Шины в Ростове-на-Дону
-      .category-counter 14 840 товаров
+      .category-counter.mb-4 14 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           include base/filter-tires.pug
