--- a/src/pug/category-wheels.pug
+++ b/src/pug/category-wheels.pug
@@ -20,7 +20,7 @@ block wrapper
         a.pathway__current(href="#") Диски
       section.content
         h1 Диски в Ростове-на-Дону
-      .category-counter 1 840 товаров
+      .category-counter.mb-4 1 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           include base/filter-wheels.pug
