--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -10,7 +10,7 @@ block wrapper
         a.pathway__current(href="#") Автозапчасти
       section.content
         h1 Автозапчасти в Ростове-на-Дону
-      .category-counter 1 840 товаров
+      .category-counter.mb-4 1 840 товаров
 
       .category.category_6col.mb-3
 
