--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -20,7 +20,7 @@ block wrapper
         a.pathway__current(href="#") #{title}
       section.content
         h1 #{title}
-      .category-counter 1 840 товаров в 4 каталогах
+      .category-counter.mb-4 1 840 товаров в 4 каталогах
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           .filter.filter_sticky
