--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -23,7 +23,7 @@ block wrapper
       h1 #{h1}
     block results__filter
       - var resultsRadio = [{index: 1, title: 'Шины (887)', checked: true}, {index: 2, title: 'Мотошины (0)'}, {index: 3, title: 'Диски (67)'}, {index: 4, title: 'АКБ (0)'}, {index: 5, title: 'Масла (0)'}, {index: 6, title: 'Автотовары (238)'}]
-      .category-counter 1 840 товаров в 4 каталогах
+      .category-counter.mb-4 1 840 товаров в 4 каталогах
       form.form.mb-3(action="#")
         each resultsRadio__item in resultsRadio
           +radio(resultsRadio__item.index, resultsRadio__item.title, resultsRadio__item.checked, 'search-radio', 'form__label_lg')
