--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -21,7 +21,7 @@ block wrapper
         a.pathway__current(href="#") Шины R18
       section.content
         h1 Купить шины CORDIANT в Ростове-на-Дону
-      .category-counter 1 840 товаров
+      .category-counter.mb-4 1 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           a.brand.brand_category.mb-3(href="#")
