--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -11,7 +11,7 @@ block wrapper
         a.pathway__current(href="#") Авточехлы
       section.content
         h1 Авточехлы
-      .category-counter 1 840 товаров
+      .category-counter.mb-4 1 840 товаров
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           include base/filter-wheels.pug
