--- a/src/scss/tpl/_card.scss
+++ b/src/scss/tpl/_card.scss
@@ -2,12 +2,12 @@
   @extend %zi-1;
   padding: 16px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .12);
   transition: all .3s ease;
 
   &:hover {
     z-index: 2;
-    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .2);
   }
 
   &.card_slide {
@@ -36,7 +36,6 @@
 
     .card__picture {
       height: 100%;
-      margin-bottom: 0;
     }
 
     &.card_tile {
@@ -63,7 +62,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-bottom: 0;
       }
     }
 
@@ -89,16 +87,10 @@
 
 .card__header {
   position: relative;
-  margin: 0 0 16px;
-
-  .card__meta_row {
-    margin-bottom: 0;
-  }
 }
 
 .card__picture {
   display: block;
-  margin: 0 0 8px;
   text-align: center;
 }
 
@@ -132,7 +124,6 @@
 
   &.card__meta_row {
     position: static;
-    margin: 0 0 8px;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -153,9 +144,9 @@
   }
 
   .text-sm {
-    @include fs-lh(0.625rem,0.875rem);
+    @include fs-lh(.625rem,.875rem);
     white-space: nowrap;
-    margin: 0 -10px 0 0;
+    margin: 0 -.625rem 0 0;
   }
 }
 
@@ -180,20 +171,20 @@
     white-space: nowrap;
     color: $color__brand;
 
-    padding: 2px 6px;
-    margin: 0 0 16px -6px;
+    padding: .125rem .375rem;
+    margin: 0 0 1rem -.375rem;
     border-radius: 12px;
     background: rgba(0,0,0,0);
 
     .card__btn-icon {
       @include fw(16px);
       @include wh(16px);
-      margin: 0 8px 0 0;
+      margin: 0 .5rem 0 0;
     }
 
     &:hover {
       background: $color__light;
-      box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.14);
+      box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .14);
 
       .card__btn-title {
         opacity: 1;
@@ -246,7 +237,7 @@
   font-weight: bold;
   line-height: 1;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: .03em;
   pointer-events: none;
 
   &.card__label_hit {
@@ -295,7 +286,7 @@
       max-width: initial;
       white-space: nowrap;
       color: #fff;
-      margin: 0 0 4px;
+      margin: 0 0 .25rem;
 
       &:last-child {
         margin-bottom: 0;
@@ -329,7 +320,7 @@
           right: 0;
           bottom: 0;
           padding: 8px;
-          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.14);
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, .14);
         }
 
         .card__features-icon {
@@ -382,11 +373,11 @@
       transform: scale(0);
       border-radius: 12px;
       background: rgba(0,0,0,0);
-      box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.14);
+      box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .14);
       transition: opacity .3s ease .2s, transform .2s ease;
 
-      padding: 2px 6px;
-      margin: 0 0 0 -26px;
+      padding: .125rem .375rem;
+      margin: 0 0 0 -1.625rem;
     }
 
     .card__features-content {
@@ -398,7 +389,7 @@
 .card__features-item {
   @include fw(16px);
   @include wh(16px);
-  margin: 0 8px 0 0;
+  margin: 0 .5rem 0 0;
   color: $color__brand;
   transition: all .3s ease;
 
@@ -442,7 +433,7 @@
 
   p {
     @include h6;
-    margin: 0 0 6px;
+    margin: 0 0 .375rem;
   }
 }
 
@@ -467,7 +458,6 @@
 .card__title {
   @include fs-lh(1rem,1.375rem);
   display: block;
-  margin: 0 0 8px;
   transition: all .3s ease;
 
   &.card__title_sm {
