--- a/src/scss/tpl/_dropdown.scss
+++ b/src/scss/tpl/_dropdown.scss
@@ -11,7 +11,7 @@
   color: $color__text_default;
 
   &[disabled] {
-    opacity: 0.5;
+    opacity: .5;
   }
 }
 
@@ -21,7 +21,7 @@
   padding: 12px 16px;
   border-radius: 4px;
   background: #fff;
-  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.16);
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 
   &.show {
     right: 0;
