--- a/src/scss/tpl/_leftmenu.scss
+++ b/src/scss/tpl/_leftmenu.scss
@@ -42,10 +42,10 @@
     padding: 0 10px;
     border-radius: 14px;
     background: $color__light;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.14);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .14);
 
     .text-sm {
         font-size: 10px;
-        letter-spacing: 0.03em;
+        letter-spacing: .03em;
     }
 }
