--- a/src/scss/tpl/_media.scss
+++ b/src/scss/tpl/_media.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
     border-radius: 8px;
     background: #fff;
-    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.16);
+    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 
     .media__picture {
       border-radius: 0;
@@ -146,7 +146,7 @@
   }
 
   @include media-breakpoint-down(sm) {
-    @include fs-lh(0.75rem,1.375rem);
+    @include fs-lh(.75rem,1.375rem);
   }
 }
 
