--- a/src/scss/tpl/_selecter.scss
+++ b/src/scss/tpl/_selecter.scss
@@ -27,7 +27,7 @@
 .fs-dropdown-selected {
   @extend %btn-default;
   @include before;
-  @include fs-lh(0.75rem,1rem);
+  @include fs-lh(.75rem,1rem);
   width: 100%;
   padding: 4px 35px 4px 14px;
   overflow: hidden;
@@ -39,7 +39,7 @@
   color: $color__brand;
   background: $color__light;
   transition: all .3s ease;
-  box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.16);
+  box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, .16);
 
   &:before {
     position: absolute;
@@ -49,7 +49,7 @@
     width: 28px;
     border-radius: 4px;
     background: #fff;
-    box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, .12);
   }
 
   &:after {
@@ -70,7 +70,7 @@
   overflow: auto;
   max-height: 182px;
   border-radius: 0 0 4px 4px;
-  box-shadow: 1px 8px 8px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 8px 8px 0 rgba(0, 0, 0, .1);
 }
 
 .fs-dropdown-item {
